@@ -200,6 +200,12 @@ For more details, see the NEWS file and for complete details, see the git log.
 	the 'set' discipline is now triggered, as it was always documented.
 	(Post-1.0 fix introduced in ksh 93u+m/1.0.9)
 
+37.	Non-base-10 signed negative integer values are now output as negative
+	numbers and no longer incorrectly treated as unsigned long integers
+	regardless of their type length. For example, 'typeset -i16 n=-12;
+	echo $n' now correctly prints -16#c instead of 16#fffffffffffffff4.
+	(Post-1.0 fix introduced in ksh 93u+m/1.0.9)
+
 ____________________________________________________________________________
 
 		KSH-93 VS. KSH-88
