@@ -1,48 +1,0 @@
-/***********************************************************************
-*                                                                      *
-*               This software is part of the ast package               *
-*          Copyright (c) 1985-2011 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2022 Contributors to ksh 93u+m           *
-*                      and is licensed under the                       *
-*                 Eclipse Public License, Version 2.0                  *
-*                                                                      *
-*                A copy of the License is available at                 *
-*      https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.html      *
-*         (with md5 checksum 84283fa8859daf213bdda5a9f8d1be1d)         *
-*                                                                      *
-*                 Glenn Fowler <gsf@research.att.com>                  *
-*                  David Korn <dgk@research.att.com>                   *
-*                   Phong Vo <kpv@research.att.com>                    *
-*                  Martijn Dekker <martijn@inlv.org>                   *
-*                                                                      *
-***********************************************************************/
-/*
- * Glenn Fowler
- * AT&T Bell Laboratories
- *
- * return base b representation for n
- * if p!=0 then base prefix is included
- * otherwise if n==0 or b==0 then output is signed base 10
- */
-
-#include <ast.h>
-
-char*
-fmtbase(intmax_t n, int b, int p)
-{
-	char*	buf;
-	int	z;
-
-	if (!p)
-	{
-		if (!n)
-			return "0";
-		if (!b)
-			return fmtint(n, 0);
-		if (b == 10)
-			return fmtint(n, 1);
-	}
-	buf = fmtbuf(z = 72);
-	sfsprintf(buf, z, p ? "%#..*I*u" : "%..*I*u", b, sizeof(n), n);
-	return buf;
-}
